chore: create social-media-sentiment-analysis.ipynb with requested contents

--- a/social-media-sentiment-analysis/social-media-sentiment-analysis.ipynb
+++ b/social-media-sentiment-analysis/social-media-sentiment-analysis.ipynb
@@ -2,163 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "858e0f94-a543-48bb-8f1d-350d58ff0a84",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Rencana penggantian nama:\n",
-      "  Untitled.ipynb -> root.ipynb\n",
-      "  Untitled1.ipynb -> root_1.ipynb\n",
-      "\n",
-      "Dry-run selesai. Untuk menerapkan perubahan, jalankan skrip dengan opsi --apply\n"
-     ]
-    },
-    {
-     "ename": "SystemExit",
-     "evalue": "0",
-     "output_type": "error",
-     "traceback": [
-      "An exception has occurred, use %tb to see the full traceback.\n",
-      "\u001b[31mSystemExit\u001b[39m\u001b[31m:\u001b[39m 0\n"
-     ]
-    }
-   ],
-   "source": [
-    "#!/usr/bin/env python3\n",
-    "\"\"\"\n",
-    "rename_notebooks.py\n",
-    "\n",
-    "Cari file notebook yang namanya dimulai dengan 'Untitled' (mis. Untitled.ipynb, Untitled1.ipynb, Untitled (1).ipynb)\n",
-    "dan ubah namanya menjadi <nama-folder>.ipynb. Jika nama target sudah ada, tambahkan suffix _1, _2, dst.\n",
-    "Default: dry-run (hanya menampilkan rencana). Gunakan --apply untuk benar-benar mengganti nama.\n",
-    "\n",
-    "Abaikan folder: .git, __pycache__, .ipynb_checkpoints\n",
-    "Aman dijalankan di Jupyter karena menggunakan parse_known_args().\n",
-    "\"\"\"\n",
-    "import os\n",
-    "import argparse\n",
-    "import re\n",
-    "import sys\n",
-    "from pathlib import Path\n",
-    "\n",
-    "IGNORED_DIRS = {'.git', '__pycache__', '.ipynb_checkpoints'}\n",
-    "\n",
-    "def find_notebooks(root):\n",
-    "    matches = []\n",
-    "    pattern = re.compile(r'^Untitled.*\\.ipynb$', re.IGNORECASE)\n",
-    "    for dirpath, dirnames, filenames in os.walk(root):\n",
-    "        # skip ignored dirs\n",
-    "        dirnames[:] = [d for d in dirnames if d not in IGNORED_DIRS]\n",
-    "        for f in filenames:\n",
-    "            if pattern.match(f):\n",
-    "                matches.append(Path(dirpath) / f)\n",
-    "    return matches\n",
-    "\n",
-    "def unique_target_for_planning(src_path: Path, base_name: str, used_targets: set):\n",
-    "    \"\"\"\n",
-    "    Pilih nama target yang unik, mempertimbangkan file yang sudah ada di filesystem\n",
-    "    dan target yang sudah direncanakan (used_targets).\n",
-    "    \"\"\"\n",
-    "    parent = src_path.parent\n",
-    "    stem = Path(base_name).stem\n",
-    "    suffix = Path(base_name).suffix or \".ipynb\"\n",
-    "    candidate = base_name\n",
-    "    i = 0\n",
-    "    # keep incrementing until candidate is not present and not already planned\n",
-    "    while (parent / candidate).exists() or str(parent / candidate) in used_targets:\n",
-    "        i += 1\n",
-    "        candidate = f\"{stem}_{i}{suffix}\"\n",
-    "    return parent / candidate\n",
-    "\n",
-    "def plan_renames(root):\n",
-    "    notebooks = find_notebooks(root)\n",
-    "    planned = []\n",
-    "    used_targets = set()\n",
-    "    for nb in notebooks:\n",
-    "        folder_name = nb.parent.name or 'root'\n",
-    "        target_name = f\"{folder_name}.ipynb\"\n",
-    "        target = unique_target_for_planning(nb, target_name, used_targets)\n",
-    "        # if source already equals target (already correctly named), skip\n",
-    "        try:\n",
-    "            if nb.resolve() == target.resolve():\n",
-    "                continue\n",
-    "        except FileNotFoundError:\n",
-    "            # in case resolution fails, ignore and proceed\n",
-    "            pass\n",
-    "        planned.append((nb, target))\n",
-    "        used_targets.add(str(target))\n",
-    "    return planned\n",
-    "\n",
-    "def do_rename(planned):\n",
-    "    for src, dst in planned:\n",
-    "        dst.parent.mkdir(parents=True, exist_ok=True)\n",
-    "        src.rename(dst)\n",
-    "        print(f\"Renamed: {src} -> {dst}\")\n",
-    "\n",
-    "def main(argv=None):\n",
-    "    parser = argparse.ArgumentParser(description=\"Rename Untitled*.ipynb to <folder>.ipynb (default: dry-run).\")\n",
-    "    parser.add_argument('--root', default='.', help='Root folder to search (default: current dir)')\n",
-    "    parser.add_argument('--apply', action='store_true', help='Actually rename the files. If not set, script runs in dry-run mode.')\n",
-    "\n",
-    "    # ignore extra args added by ipykernel/jupyter (mis. -f <path>)\n",
-    "    if argv is None:\n",
-    "        args, _unknown = parser.parse_known_args()\n",
-    "    else:\n",
-    "        args = parser.parse_args(argv)\n",
-    "\n",
-    "    planned = plan_renames(args.root)\n",
-    "    if not planned:\n",
-    "        print(\"Tidak ditemukan file Untitled*.ipynb atau tidak ada perubahan yang diperlukan.\")\n",
-    "        return 0\n",
-    "\n",
-    "    print(\"Rencana penggantian nama:\")\n",
-    "    for src, dst in planned:\n",
-    "        print(f\"  {src} -> {dst}\")\n",
-    "\n",
-    "    if not args.apply:\n",
-    "        print(\"\\nDry-run selesai. Untuk menerapkan perubahan, jalankan skrip dengan opsi --apply\")\n",
-    "        return 0\n",
-    "\n",
-    "    do_rename(planned)\n",
-    "    print(f\"\\nSelesai. {len(planned)} file diubah.\")\n",
-    "    return 0\n",
-    "\n",
-    "if __name__ == '__main__':\n",
-    "    sys.exit(main())"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
-   "id": "1a098783-e662-4647-9009-dd55790c5b26",
+   "id": "afaee9b0",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd\n",
+    "import nltk\n",
+    "from nltk.sentiment.vader import SentimentIntensityAnalyzer\n",
+    "\n",
+    "print(\"pandas\", pd.__version__)\n",
+    "nltk.download(\"vader_lexicon\", quiet=True)\n",
+    "sid = SentimentIntensityAnalyzer()\n",
+    "print(sid.polarity_scores(\"I love this product\"))"
+   ]
   }
  ],
- "metadata": {
-  "kernelspec": {
-   "display_name": "Python (social-media-sentiment)",
-   "language": "python",
-   "name": "social_media_sentiment"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.14.0"
-  }
- },
+ "metadata": {},
  "nbformat": 4,
  "nbformat_minor": 5
 }
