chore: execute notebook and record outputs

--- a/social-media-sentiment-analysis/social-media-sentiment-analysis.ipynb
+++ b/social-media-sentiment-analysis/social-media-sentiment-analysis.ipynb
@@ -2,10 +2,34 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "04f1e86c",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-10-26T12:09:38.398736Z",
+     "iopub.status.busy": "2025-10-26T12:09:38.398564Z",
+     "iopub.status.idle": "2025-10-26T12:09:40.548953Z",
+     "shell.execute_reply": "2025-10-26T12:09:40.548114Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pandas 2.3.3\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "VADER example: {'neg': 0.0, 'neu': 0.323, 'pos': 0.677, 'compound': 0.6369}\n",
+      "\n",
+      "No trained model at social-media-sentiment-analysis/models/model_pipeline.joblib â€” run training pipeline to add predictions.\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import nltk\n",
@@ -36,7 +60,20 @@
    ]
   }
  ],
- "metadata": {},
+ "metadata": {
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.14.0"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 5
 }
