chore: add social-media-sentiment-analysis pipeline and final executed notebook

--- a/social-media-sentiment-analysis/social-media-sentiment-analysis.ipynb
+++ b/social-media-sentiment-analysis/social-media-sentiment-analysis.ipynb
@@ -3,13 +3,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "04f1e86c",
+   "id": "cbf96b4c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-10-26T12:09:55.292232Z",
-     "iopub.status.busy": "2025-10-26T12:09:55.291806Z",
-     "iopub.status.idle": "2025-10-26T12:09:57.632414Z",
-     "shell.execute_reply": "2025-10-26T12:09:57.631320Z"
+     "iopub.execute_input": "2025-10-26T13:22:09.969850Z",
+     "iopub.status.busy": "2025-10-26T13:22:09.969402Z",
+     "iopub.status.idle": "2025-10-26T13:22:13.602450Z",
+     "shell.execute_reply": "2025-10-26T13:22:13.601372Z"
     }
    },
    "outputs": [
@@ -26,7 +26,7 @@
      "text": [
       "VADER example: {'neg': 0.0, 'neu': 0.323, 'pos': 0.677, 'compound': 0.6369}\n",
       "\n",
-      "No trained model at social-media-sentiment-analysis/models/model_pipeline.joblib â€” run training pipeline to add predictions.\n"
+      "No trained model at social-media-sentiment-analysis/models/model_pipeline.joblib — run training pipeline to add predictions.\n"
      ]
     }
    ],
@@ -56,7 +56,7 @@
     "    for s,p in zip(samples, preds):\n",
     "        print(f'[{p}]', s)\n",
     "else:\n",
-    "    print('\\nNo trained model at', model_path, 'â€” run training pipeline to add predictions.')\n"
+    "    print('\\nNo trained model at', model_path, '— run training pipeline to add predictions.')\n"
    ]
   }
  ],
