chore: add notebook outputs + results (local)

--- a/social-media-sentiment-analysis/social-media-sentiment-analysis.ipynb
+++ b/social-media-sentiment-analysis/social-media-sentiment-analysis.ipynb
@@ -1,62 +1,144 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "511d1d29",
+   "metadata": {},
+   "source": [
+    "# Social Media Sentiment — Quick Predictions\n",
+    "\n",
+    "This notebook attempts to load the trained pipeline and show a results table. If no trained model is found, a table with a message will be displayed so you get a clear, tabular output instead of an error message."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "b3b76ca6",
+   "id": "1d12c046",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-10-26T14:44:55.045081Z",
-     "iopub.status.busy": "2025-10-26T14:44:55.044833Z",
-     "iopub.status.idle": "2025-10-26T14:44:57.090131Z",
-     "shell.execute_reply": "2025-10-26T14:44:57.089340Z"
+     "iopub.execute_input": "2025-10-27T04:00:48.212420Z",
+     "iopub.status.busy": "2025-10-27T04:00:48.212247Z",
+     "iopub.status.idle": "2025-10-27T04:00:48.599950Z",
+     "shell.execute_reply": "2025-10-27T04:00:48.598635Z"
     }
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "pandas 2.3.3\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "VADER example: {'neg': 0.0, 'neu': 0.323, 'pos': 0.677, 'compound': 0.6369}\n",
-      "\n",
-      "No trained model at social-media-sentiment-analysis/models/model_pipeline.joblib — run training pipeline to add predictions.\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sample</th>\n",
+       "      <th>prediction</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>I absolutely love this! Highly recommend.</td>\n",
+       "      <td>No trained model at social-media-sentiment-ana...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>This is ok, nothing special.</td>\n",
+       "      <td>No trained model at social-media-sentiment-ana...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Terrible experience, will never buy again.</td>\n",
+       "      <td>No trained model at social-media-sentiment-ana...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                       sample  \\\n",
+       "0   I absolutely love this! Highly recommend.   \n",
+       "1                This is ok, nothing special.   \n",
+       "2  Terrible experience, will never buy again.   \n",
+       "\n",
+       "                                          prediction  \n",
+       "0  No trained model at social-media-sentiment-ana...  \n",
+       "1  No trained model at social-media-sentiment-ana...  \n",
+       "2  No trained model at social-media-sentiment-ana...  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "import pandas as pd\n",
-    "import nltk\n",
-    "from nltk.sentiment.vader import SentimentIntensityAnalyzer\n",
+    "\n",
     "import joblib\n",
-    "import os\n",
+    "import pandas as pd\n",
+    "from pathlib import Path\n",
     "\n",
-    "print('pandas', pd.__version__)\n",
-    "nltk.download('vader_lexicon', quiet=True)\n",
-    "sid = SentimentIntensityAnalyzer()\n",
-    "print('VADER example:', sid.polarity_scores('I love this product'))\n",
+    "MODEL_PATH = Path(\"social-media-sentiment-analysis/models/model_pipeline.joblib\")\n",
     "\n",
-    "# If a trained pipeline exists, load and run a few examples\n",
-    "model_path = 'social-media-sentiment-analysis/models/model_pipeline.joblib'\n",
-    "if os.path.exists(model_path):\n",
-    "    print('\\nLoaded model pipeline from', model_path)\n",
-    "    pipe = joblib.load(model_path)\n",
-    "    samples = [\n",
-    "        'I absolutely love this! Highly recommend.',\n",
-    "        'This is ok, nothing special.',\n",
-    "        'Terrible experience, will never buy again.'\n",
-    "    ]\n",
-    "    preds = pipe.predict(samples)\n",
-    "    for s,p in zip(samples, preds):\n",
-    "        print(f'[{p}]', s)\n",
+    "# Sample texts used for quick demonstration\n",
+    "samples = [\n",
+    "    \"I absolutely love this! Highly recommend.\",\n",
+    "    \"This is ok, nothing special.\",\n",
+    "    \"Terrible experience, will never buy again.\"\n",
+    "]\n",
+    "\n",
+    "if MODEL_PATH.exists():\n",
+    "    try:\n",
+    "        pipe = joblib.load(MODEL_PATH)\n",
+    "        preds = pipe.predict(samples)\n",
+    "        df = pd.DataFrame({\"sample\": samples, \"prediction\": preds})\n",
+    "    except Exception as e:\n",
+    "        # In case loading/predicting fails, still show table with error info\n",
+    "        df = pd.DataFrame({\n",
+    "            \"sample\": samples,\n",
+    "            \"prediction\": [f\"Error running model: {str(e)}\"] * len(samples)\n",
+    "        })\n",
     "else:\n",
-    "    print('\\nNo trained model at', model_path, '— run training pipeline to add predictions.')\n"
+    "    # Model not found: show table with a clear instruction message\n",
+    "    msg = (\n",
+    "        \"No trained model at social-media-sentiment-analysis/models/model_pipeline.joblib \"\n",
+    "        \"— run the training pipeline (e.g. python social-media-sentiment-analysis/train_quick.py) \"\n",
+    "        \"to add predictions.\"\n",
+    "    )\n",
+    "    df = pd.DataFrame({\"sample\": samples, \"prediction\": [msg] * len(samples)})\n",
+    "\n",
+    "# Display the DataFrame so Jupyter renders a nice HTML table in outputs\n",
+    "display(df)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ef54d05b",
+   "metadata": {},
+   "source": [
+    "Next steps:\n",
+    "\n",
+    "1. If you see the instruction that the model is missing, run:\n",
+    "\n",
+    "`python social-media-sentiment-analysis/train_quick.py`\n",
+    "\n",
+    "2. Then re-run this notebook or execute it in-place with nbconvert:\n",
+    "\n",
+    "`python -m nbconvert --to notebook --inplace --execute \"social-media-sentiment-analysis/social-media-sentiment-analysis.ipynb\" --ExecutePreprocessor.timeout=120`\n",
+    "\n",
+    "This notebook always produces a table as output so it's easier to verify results or see why predictions are missing."
    ]
   }
  ],
