docs: add/update README and run outputs

--- a/social-media-sentiment-analysis/social-media-sentiment-analysis.ipynb
+++ b/social-media-sentiment-analysis/social-media-sentiment-analysis.ipynb
@@ -16,10 +16,10 @@
    "id": "1d12c046",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-10-27T09:10:24.677626Z",
-     "iopub.status.busy": "2025-10-27T09:10:24.677391Z",
-     "iopub.status.idle": "2025-10-27T09:10:25.428190Z",
-     "shell.execute_reply": "2025-10-27T09:10:25.427346Z"
+     "iopub.execute_input": "2025-10-27T12:39:51.313395Z",
+     "iopub.status.busy": "2025-10-27T12:39:51.312938Z",
+     "iopub.status.idle": "2025-10-27T12:39:51.816016Z",
+     "shell.execute_reply": "2025-10-27T12:39:51.815349Z"
     }
    },
    "outputs": [
@@ -143,6 +143,10 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "name": "python3"
+  },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
